<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sv_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/app_padding"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_nrp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_nrp"
            android:inputType="number" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/et_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_address"
            android:inputType="textPostalAddress|textMultiLine" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_email"
            android:inputType="textEmailAddress" />

        <CheckBox
            android:id="@+id/cb_disability"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_disability" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_male"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/text_male" />

            <RadioButton
                android:id="@+id/rb_female"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_female" />
        </RadioGroup>

        <Spinner
            android:id="@+id/spin_departments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_submit" />

    </LinearLayout>

</ScrollView>